# sentiment-analysis

./: .gitignore  check_sensible_data.ipynb  clean_and_prepare.ipynb  main.ipynb  main.py  params.json  pyproject.toml  quality_analysis_textual_data.ipynb  requirements.txt  test.ipynb  variables.json  visual_exploration.ipynb
code_studios/: Abd0MdX.json
dashboards/: EMKQ37x.json
datasets/: annotated_tweets.json  cleaned_tweets.json  cleaned_tweets_encryption.json  cleaned_tweets_removal.json  df_high_percentage_numbers.json  df_repetitive.json  df_unreadable.json  df_very_short_tweets.json  dl_eval_metrics.json  dl_eval_prediction_results.json  dl_metrics.json  encrypted_metrics.json  encrypted_metrics_df.json  encrypted_metrics_per_fold.json  enhanced_tweets_informations.json  eval_metrics.json  eval_prediction_results.json  filtered_tweets.json  high_percentage_numbers_tweets.json  imported_tweets.json  imported_tweets_filtered.json  labelled_tweets.json  lr_metrics.json  metrics_per_fold.json  output.json  prepared_tweets.json  prepared_tweets_encryption.json  prepared_tweets_removal.json  removed_metrics.json  removed_metrics_df.json  removed_metrics_per_fold.json  repetitive_tweets.json  sensible_data_encrypted.json  sensible_data_identified.json  sensitive_data_identified.json  sensitive_data_removed.json  sentiment_analysed.json  tweets.json  tweets_NER.json  tweets_NER_with_Python_code.json  (+13 more)
explore/: enhanced_tweets_informations.json  imported_tweets.json  labelled_tweets.json  repetitive_tweets.json  sensitive_data_identified.json  tweets.json  (+4 more)
(+154 files in other folders)
