[project]
name = "edf-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chardet>=5.2.0",
    "decorator==5.1.1",
    "dotenv>=0.9.9",
    "fasttext>=0.9.3",
    "ipykernel==6.23.3",
    "ipython>=8.12,<8.13",
    "ipython-genutils==0.2.0",
    "jupyter-client==6.1.12",
    "jupyter-core==4.12.0",
    "kaggle>=1.7.4.1",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "numpy<1.27",
    "pandas>=2.2,<2.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pip>=25.0.1",
    "ptyprocess==0.7.0",
    "python-dateutil>=2.8.2,<3",
    "pyzmq==23.2.1",
    "regexp>=0.1",
    "requests<3",
    "simplegeneric==0.8.1",
    "tornado>=6.3,<6.5",
    "traitlets==5.9.0",
    "urllib3<2",
    "wordcloud>=1.9.4",
]
